Fixed an extra space after the urldate construction

--- a/example.tex
+++ b/example.tex
@@ -39,6 +39,7 @@ Seven genus-group names based on extant taxa have been allocated to the Sphyraen
 
 \citet{Santini2015} has presented an overview of six fossil species names associated with \textit{Sphyraena}; these authors mentioned \textit{Sphyraena fluctuosa} as a Sphyraenid species based on otolihts; however, such species was originally described by \citet{Nolf1972} in the genus \textit{Platycephalus} (Scorpaeniformes) and subsequently ratified in that genus \citep[e.g.,][]{Huyghebaert1979}. It is herein excluded from the Sphyraenid fossil species. \textit{Sphyraena intermedia} \citealp{Bassani1889} was mentioned also by Santini et al. without noting that another species of extant \textit{Sphyraena} was described with the same specific epithet \citep{Pastore2009}; therefore the latter species by Pastore is herein found to be primary homonym of \textit{Sphyraena intermedia} \citep{Bassani1889}, a fossil species known from the Oligocene of Italy and consequently the name by Pastore is deemed permanently invalid under Article 57.2 of the \citet{ICZN1999}.
 
+The style handles properly situations just like web pages through the \texttt{@misc} tag \citep[e.g., ][]{EschmeyerWeb} and book sections \citep{Switchenska1968,Bohm1924}
 
 \bibliographystyle{zootaxa}
 \bibliography{example-refs}
